5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4060/executions/1760_1183.log
== TEST (2019-05-24 15:58:16) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:10:22) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	


print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:11:04) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	


print(av)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:11:21) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	


print(av)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:11:37) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	


print(av)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:14:46) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	vp=zeros(av)

print(vp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:17:23) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	vp=array(av)

print(vp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:18:24) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	vp=array([av])

print(vp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:46:58) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	vp=array([av])
	

print(vp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:56:11) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=arange(av)
	
	

print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:56:48) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=arange(av)
	vp=array([av])
	

print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:56:58) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	
	vp=array([av])
	

print(vp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:57:20) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	
	vp=array([av])
	

print(vp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:58:15) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
i=0
av=0

while(i<=size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	
	vp=array([av])
	

print(vp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:58:24) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	
	vp=array([av])
	

print(vp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:59:08) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=arange(av)
	
	

print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:59:27) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=arange(av)
	
	

print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:08:26) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=arange(av)
while(i<size):
	if(v[i]>0):
		ap=av*0
	
print(ap)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:08:53) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=arange(av)
while(i<size(v)):
	if(v[i]>0):
		ap=av*0
	
print(ap)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:09:20) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=arange(av)
while(i<size(v)):
	if(v[i]>0):
		ap=[av]*0
	
print(ap)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:11:11) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=arange(av)
while(i<size(v)):
	if(v[i]>0):
		ap=size(av)*0
	
print(ap)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:11:40) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=arange(av)
while(i<size(v)):
	if(v[i]>0):
		ap=size(av)*0
	
print(ap)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:11:48) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=arange(av)
while(i<size(v)):
	if(v[i]>0):
		ap=size(v1)*0
	
print(ap)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:13:24) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=arange(av)
	
print(size(v1)*0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:13:35) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=arange(av)
	
print(size(v1)*0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 13:13:36) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=arange(av)
	
print(size(v1)*0)
-- EXECUTION TIME:
0.491931
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
0
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
0
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
elementos: 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:17:34) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=arange(av)
	
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:18:45) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=arange(av)
	
print(v1+1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:19:18) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=arange(av)
	
print(v1*0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:26:20) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=arange(av)
	
while(ii<size(v)):
	if(v[ii]>0):
		v2=v[ii]+v1
	ii=ii+1
	
		v3=v[i]+0
		
-- ERROR:
File "XXXX", line 18
    v3=v[i]+0
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:26:34) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=arange(av)
	
while(ii<size(v)):
	if(v[ii]>0):
		v2=v[ii]+v1
	ii=ii+1
	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:26:59) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=arange(av)
	
while(ii<size(v)):
	if(v[ii]>0):
		v2=v[ii]+v1
	ii=ii+1
	
print(v2)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:28:22) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=ones(av, dtype=int)
	
while(ii<size(v)):
	if(v[ii]>0):
		v2=v[ii]+v1
	ii=ii+1
	
print(v2)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:02:01) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while(ii<size(v)):
	if(v[ii]>0):
		v2=v[ii]+v1
	ii=ii+1
	
print(v2)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:03:48) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	

	
print(v1)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:06:12) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while(ii<size(v)):
	if(v[ii]>0):
		v2=v[ii]+v1
	ii=ii+1
	
print(v2)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:06:28) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while(ii<size(v)):
	if(v[ii]>0):
		v2=v[ii]+v1
	ii=ii+1
	
print(v2)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:08:59) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while(ii<size(v)):
	if(v[ii]>0):
		v2=v[ii]+v1[i]
	ii=ii+1
	
print(v2)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:10:33) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while(ii<size(v)):
	if(v[ii]>0):
		v2=v[ii]+v1[ii]
	ii=ii+1
	
print(v2)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:14:03) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while(ii<size(v)):
	if(v[ii]>0):
		v2=v[ii]+v1[iii]
	ii=ii+1
	iii=iii+1
	
print(v2)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:20:02) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while(ii<size(v)):
	if(v[ii]>0):
		v1=v[ii]+v1[iii]
		v3=v1
	ii=ii+1
	iii=iii+1
	
print(v2)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:21:10) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while(ii<size(v)):
	if(v[ii]>0):
		v1=v[ii]+v1[iii]
		v3=v1
	ii=ii+1
	iii=iii+1
	
print(v3)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:24:45) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while(ii<size(v)):
	if(v[ii]>0):
		v1[iii]=v[ii]+v1[iii]
		v3=v1
	ii=ii+1
	iii=iii+1
	
print(v3)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:25:01) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while(ii<size(v)):
	if(v[ii]>0):
		v1[iii]=v[ii]+v1[iii]
		v3=v1
	ii=ii+1
	iii=iii+1
	
print(v3)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:25:23) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while(ii<size(v)):
	if(v[ii]>0):
		v1[iii]=v[ii]+v1[iii]
		v3=v1
	ii=ii+1
	iii=iii+1
	
print(v3)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:25:33) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while(ii<size(v)):
	if(v[ii]>0):
		v1[iii]=v[ii]+v1[iii]
		v3=v1
	ii=ii+1
	iii=iii+1
	
print(v3)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 14:25:47) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while(ii<size(v)):
	if(v[ii]>0):
		v1[iii]=v[ii]+v1[iii]
		v3=v1
	ii=ii+1
	iii=iii+1
	
print(v3)	

		
-- EXECUTION TIME:
0.513075
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1760/1183/main.py", line 16, in <module>
    v1[iii]=v[ii]+v1[iii]
IndexError: index 10 is out of bounds for axis 0 with size 1

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:25:58) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while(ii<size(v)):
	if(v[ii]>0):
		v1[iii]=v[ii]+v1[iii]
		v3=v1
	ii=ii+1
	iii=iii+1
	
print(v3)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:26:22) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while(ii<size(v)):
	if(v[ii]>0):
		v1[iii]=v[ii]+v1[iii]
		v3=v1
	ii=ii+1
	iii=iii+1
	
print(v3)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 14:27:17) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while(ii<size(v)):
	if(v[ii]>0):
		v1[iii]=v[ii]+v1[iii]
		v3=v1
	ii=ii+1
	iii=iii+1
	
print(v3)	

		
-- EXECUTION TIME:
0.321601
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1760/1183/main.py", line 16, in <module>
    v1[iii]=v[ii]+v1[iii]
IndexError: index 10 is out of bounds for axis 0 with size 1

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:27:22) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while(ii<size(v)):
	if(v[ii]>0):
		v1[iii]=v[ii]+v1[iii]
		v3=v1
	ii=ii+1
	iii=iii+1
	
print(v3)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:27:38) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while(ii<size(v)):
	if(v[ii]>0):
		v1[iii]=v[ii]+v1[iii]
		v3=v1
	ii=ii+1
	iii=iii+1
	
print(v3)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:30:00) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while(ii<size(v)):
	if(v[ii]>0):
		v1[iii]=v[ii]+v1[iii]
		v3=v1
		ii=ii+1
		iii=iii+1
	
print(v3)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:30:07) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while(ii<size(v)):
	if(v[ii]>0):
		v1[iii]=v[ii]+v1[iii]
		v3=v1
		ii=ii+1
		iii=iii+1
	
print(v3)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:30:16) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while(ii<size(v)):
	if(v[ii]>0):
		v1[iii]=v[ii]+v1[iii]
		v3=v1
		ii=ii+1
		iii=iii+1
	
print(v3)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:30:41) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while(ii<size(v)):
	if(v[ii]>0):
		v1[iii]=v[ii]+v1[iii]
		v3=v1
		ii=ii+1
		iii=iii+1
	
print(v3)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:33:20) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while((ii<size(v))and((iii<size(v)))):
	if(v[ii]>0):
		v1[iii]=v[ii]+v1[iii]
		v3=v1
	ii=ii+1
	iii=iii+1
	
print(v3)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:33:28) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while((ii<size(v))and((iii<size(v)))):
	if(v[ii]>0):
		v1[iii]=v[ii]+v1[iii]
		v3=v1
	ii=ii+1
	iii=iii+1
	
print(v3)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:34:40) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while((ii<size(v))and((iii<size(v)))):
	if(v[ii]>0):
		v1[iii]=v[ii]+v1[iii]
		v3=v1
	ii=ii+1
	iii=iii+1
	
print(v3)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:34:50) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while((ii<size(v))and((iii<size(v)))):
	if(v[ii]>0):
		v1[iii]=v[ii]+v1[iii]
		v3=v1
	ii=ii+1
	iii=iii+1
	
print(v3)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:34:54) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while((ii<size(v))and((iii<size(v)))):
	if(v[ii]>0):
		v1[iii]=v[ii]+v1[iii]
		v3=v1
	ii=ii+1
	iii=iii+1
	
print(v3)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:37:03) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while((ii<size(v))and((iii<size(v)))):
	if(v[ii]>0):
		v1=v[ii]+v1[iii]
		v3=v1
	ii=ii+1
	iii=iii+1
	
print(v3)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 14:38:15) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while((ii<size(v))and((iii<size(v)))):
	if(v[ii]>0):
		v1[ii]=v[ii]+v1[iii]
		v3=v1
	ii=ii+1
	iii=iii+1
	
print(v3)	

		
-- EXECUTION TIME:
0.529682
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1760/1183/main.py", line 16, in <module>
    v1[ii]=v[ii]+v1[iii]
IndexError: index 10 is out of bounds for axis 0 with size 1

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:38:16) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while((ii<size(v))and((iii<size(v)))):
	if(v[ii]>0):
		v1[ii]=v[ii]+v1[iii]
		v3=v1
	ii=ii+1
	iii=iii+1
	
print(v3)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:39:46) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while((ii<size(v)):
	if(v[ii]>0):
		v1[iii]=v[ii]+v1[iii]
		v3=v1
	ii=ii+1
	iii=iii+1
	
print(v3)	

		
-- ERROR:
File "XXXX", line 14
    while((ii<size(v)):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 14:39:48) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while((ii<size(v)):
	if(v[ii]>0):
		v1[iii]=v[ii]+v1[iii]
		v3=v1
	ii=ii+1
	iii=iii+1
	
print(v3)	

		
-- EXECUTION TIME:
0.23205
-- ERROR:
  File "/home/codebench/codes/1760/1183/main.py", line 14
    while((ii<size(v)):
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:46:28) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while((ii<size(v)):
	if(v[ii]>0):
		v1[iii]=v[ii]+v1[iii]
		v3=v1
	ii=ii+1
	iii=iii+1
	
print(v3)	

		
-- ERROR:
File "XXXX", line 14
    while((ii<size(v)):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:46:41) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while((ii<size(v)):
	if(v[ii]>0):
		v1[iii]=v[ii]+v1[iii]
		v3=v1
	ii=ii+1
	iii=iii+1
	
print(v3)	

		
-- ERROR:
File "XXXX", line 14
    while((ii<size(v)):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:46:54) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while((ii<size(v))):
	if(v[ii]>0):
		v1[iii]=v[ii]+v1[iii]
		v3=v1
	ii=ii+1
	iii=iii+1
	
print(v3)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:47:07) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while((ii<size(v))):
	if(v[ii]>0):
		v1[iii]=v[ii]+v1[iii]
		v3=v1
	ii=ii+1
	iii=iii+1
	
print(v3)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:47:55) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	else:
		i=i+1
	
while((ii<size(v))):
	if(v[ii]>0):
		v1[iii]=v[ii]+v1[iii]
		v3=v1
	ii=ii+1
	iii=iii+1
	
print(v3)	

		
-- ERROR:
File "XXXX", line 13
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:48:14) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	elif:
		i=i+1
	
while((ii<size(v))):
	if(v[ii]>0):
		v1[iii]=v[ii]+v1[iii]
		v3=v1
	ii=ii+1
	iii=iii+1
	
print(v3)	

		
-- ERROR:
File "XXXX", line 13
    elif:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:49:03) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	elif(v[i]<0)
		i=i+1
	
while((ii<size(v))):
	if(v[ii]>0):
		v1[iii]=v[ii]+v1[iii]
		v3=v1
	ii=ii+1
	iii=iii+1
	
print(v3)	

		
-- ERROR:
File "XXXX", line 13
    elif(v[i]<0)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:49:47) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
		i=i+1	
		v1=zeros(av, dtype=int)
	elif(v[i]<0)
		i=i+1
	
while((ii<size(v))):
	if(v[ii]>0):
		v1[iii]=v[ii]+v1[iii]
		v3=v1
	ii=ii+1
	iii=iii+1
	
print(v3)	

		
-- ERROR:
File "XXXX", line 13
    elif(v[i]<0)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:50:57) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while((ii<size(v))):
	if(v[ii]>0):
		v1[iii]=v[ii]+v1[iii]
		v3=v1
	ii=ii+1
	iii=iii+1
	
print(v3)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 17:09:41) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while((ii<size(v))):
	if(v[ii]>0):
		vb[iii]=v[ii]+vb[iii]

	ii=ii+1
	iii=iii+1
	
print(vb+v1)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 17:10:18) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while((ii<size(v))):
	if(v[ii]>0):
		v1[iii]=v[ii]+v1[iii]
	
	ii=ii+1
	iii=iii+1
	
print(v3)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 17:11:12) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0

while(i<size(v)):
	if(v(i)>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while((ii<size(v))):
	if(v[ii]>0):
		v1[iii]=v[ii]+v1[iii]
	
	ii=ii+1
	iii=iii+1
	
print(v3)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 17:12:04) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while((ii<size(v))):
	if(v[ii]>0):
		v1[iii]=v[ii]+v1[iii]
	
	ii=ii+1
	iii=iii+1
	
print(v3)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 17:12:12) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while((ii<size(v))):
	if(v[ii]>0):
		v1[iii]=v[ii]+v1[iii]
	
	ii=ii+1
	iii=iii+1
	
print(v3)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 17:12:49) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while((ii<size(v))):
	if(v[ii]>0):
		v1[iii]=v[ii]+v1[iii]
	
	ii=ii+1
	iii=iii+1
	
print(v1)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 17:13:01) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while((ii<size(v))):
	if(v[ii]>0):
		v1[iii]=v[ii]+v1[iii]
	
	ii=ii+1
	iii=iii+1
	
print(v1)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 17:13:05) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while((ii<size(v))):
	if(v[ii]>0):
		v1[iii]=v[ii]+v1[iii]
	
	ii=ii+1
	iii=iii+1
	
print(v1)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 17:13:06) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while((ii<size(v))):
	if(v[ii]>0):
		v1[iii]=v[ii]+v1[iii]
	
	ii=ii+1
	iii=iii+1
	
print(v1)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 17:13:06) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while((ii<size(v))):
	if(v[ii]>0):
		v1[iii]=v[ii]+v1[iii]
	
	ii=ii+1
	iii=iii+1
	
print(v1)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 17:13:27) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while((ii<size(v))):
	if(v[ii]>0):
		v1[iii]=v[ii]+v1[iii]
	
	ii=ii+1
	iii=iii+1
	
print(v1)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 17:14:20) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while((ii<size(v))):
	if(v[ii]>0):
		vb[iii]=v[ii]+vb[iii]
	
	ii=ii+1
	iii=iii+1
	
print(v1+vb)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 17:15:11) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0

while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while((i<size(v))):
	if(v[ii]>0):
		vb[iii]=v[i]+vb[iii]
	
	i=i+1
	iii=iii+1
	
print(v1+vb)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 17:17:01) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0


while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while((i<size(v))):
	if(v[i]>0):
		vb[iii]=v[i]+vb[iii]
	
	i=i+1
	iii=iii+1
	
print(v1+vb)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 17:19:19) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0
vb=[]


while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while((i<size(v))):
	if(v[i]>0):
		vb[iii]=v[i]+vb[iii]
	
	i=i+1
	iii=iii+1
	
print(v1+vb)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 18:26:37) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0
vb=[]


while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while((i<size(v))):
	if(v[i]>0):
		vb[iii]=v[i]+vb[iii]
		iii=iii+1
	i=i+1
	
print(v1+vb)	

		
-- EXECUTION TIME:
0.409244
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:

-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:27:18) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0



while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
print(v1)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:27:27) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0



while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
print(v1)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:27:31) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0



while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
print(v1)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:31:13) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0



while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while((i<size(v))):
	if(v[i]>0):
		v1[ii]=v[iii]+v1[ii]
		ii=ii+1
	iii=iii+1
	
print(v1)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:36:19) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0



while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while((i<size(v))):
	if(v[i]>0):
		v1[ii]=v[iii]+v1[ii]
		ii=ii+1
	iii=iii+1
	
print(v1)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:37:13) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0



while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while((i<size(v))):
	if(v[iii]>0):
		v1[ii]=v[iii]+v1[ii]
		ii=ii+1
	iii=iii+1
	
print(v1)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:38:13) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0



while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while((i<size(v))):
	if(v[iii]>0):
		v1[ii]=v[iii]+v1[ii]
		ii=ii+1
	iii=iii+1
	v2=v1
	
print(v2)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:38:39) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0



while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	
while((i<size(v))):
	if(v[iii]>0):
		v1[ii]=v[iii]+v1[ii]
		ii=ii+1
		v2=v1
	iii=iii+1
	
print(v2)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:40:04) 
-- CODE:
from numpy import*
v=array(eval(input("elementos: ")))
iii=0
ii=0
i=0
av=0



while(i<size(v)):
	if(v[i]>0):
		av=av+1
	i=i+1	
	v1=zeros(av, dtype=int)
	

	
print(v1)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:51:58) 
-- CODE:
from numpy import*
vetor_inicial=array(eval(input("elementos: ")))
aux1=0
aux2=0
aux3=0
qt_positivos=0



while(aux1<size(vetor_inicial)):
	if(vetor_inicial[aux1]>=0):
		qt_positivos = qt_positivos + 1
	aux1=aux1+1	
	v_positivos=zeros(qt_positivos, dtype=int)
	
while((aux2<size(vetor_inicial))):
	if(vetor_inicial[aux2]>=0):
		v_positivos[aux3]=vetor_inicial[aux2]
		aux3=aux3+1
	aux2=aux2+1
	
print(v_positivos)	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 18:52:13) 
-- CODE:
from numpy import*
vetor_inicial=array(eval(input("elementos: ")))
aux1=0
aux2=0
aux3=0
qt_positivos=0



while(aux1<size(vetor_inicial)):
	if(vetor_inicial[aux1]>=0):
		qt_positivos = qt_positivos + 1
	aux1=aux1+1	
	v_positivos=zeros(qt_positivos, dtype=int)
	
while((aux2<size(vetor_inicial))):
	if(vetor_inicial[aux2]>=0):
		v_positivos[aux3]=vetor_inicial[aux2]
		aux3=aux3+1
	aux2=aux2+1
	
print(v_positivos)	

		
-- EXECUTION TIME:
0.586262
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 18:53:42) 
-- CODE:
from numpy import*
vetor_inicial=array(eval(input("elementos: ")))
aux1=0
aux2=0
aux3=0
qt_positivos=0
while(aux1<size(vetor_inicial)):
	if(vetor_inicial[aux1]>=0):
		qt_positivos = qt_positivos + 1
	aux1=aux1+1	
	v_positivos=zeros(qt_positivos, dtype=int)
while((aux2<size(vetor_inicial))):
	if(vetor_inicial[aux2]>=0):
		v_positivos[aux3]=vetor_inicial[aux2]
		aux3=aux3+1
	aux2=aux2+1
print(v_positivos)	

		
-- EXECUTION TIME:
0.324548
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 23:06:11) 
-- CODE:
from numpy import*
vetor_inicial=array(eval(input("elementos: ")))
aux1=0
aux2=0
aux3=0
qt_positivos=0
while(aux1<size(vetor_inicial)):
	if(vetor_inicial[aux1]>=0):
		qt_positivos = qt_positivos + 1
	aux1=aux1+1	
	v_positivos=zeros(qt_positivos, dtype=int)
while((aux2<size(vetor_inicial))):
	if(vetor_inicial[aux2]>=0):
		v_positivos[aux3]=vetor_inicial[aux2]
		aux3=aux3+1
	aux2=aux2+1
print(v_positivos)	

		
-- EXECUTION TIME:
0.560783
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
